Some codes documented

--- a/views/admin/admin-login.hbs
+++ b/views/admin/admin-login.hbs
@@ -1,3 +1,5 @@
+ <!-- ===== admin login start ==== -->
+
  <section class="login-section">
       <div class="container py-5">
         <div class="row justify-content-center align-items-center">
@@ -25,7 +27,9 @@
       </div>
     </section>
 
-    {{!-- custom css --}}
+  <!-- ===== admin login end ==== -->  
+
+  <!-- ===== admin login css start ==== -->
 
     <style>
     .custom-card{
@@ -51,3 +55,5 @@
         width: 100%;
     }
     </style>
+
+  <!-- ===== admin login css end ==== -->
