--- a/views/admin/edit-product.hbs
+++ b/views/admin/edit-product.hbs
@@ -1,3 +1,5 @@
+<!-- ===== edit product start ==== -->
+
 <section class="pt-5">
     <div class="container">
         <div class="row">
@@ -36,6 +38,8 @@
         </div>
     </div>
 </section>
+
+<!-- ===== edit product end ==== -->
 
 <script>
     function viewImage(event){
