--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -1,3 +1,5 @@
+<!-- ======= admin header start =======-->
+
 <header class="bg-primary" id="yt-bg">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-primary">
@@ -30,8 +32,9 @@
 </header>
 
 
-<!-- ======= custom css start =======-->
+<!-- ======= admin header end =======-->
 
+<!-- ======= admin header style start =======-->
 
 <style>
     .navbar-brand {
@@ -100,3 +103,5 @@
     }
 
 </style>
+
+<!-- ======= admin header style end =======-->
