--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -1,3 +1,5 @@
+<!-- ======= user header start =======-->
+
 <header class="bg-primary" id="yt-bg">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-primary">
@@ -28,7 +30,8 @@
                 {{#if user}}
                 <div class="signup">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-light btn-lg"><i class="fas fa-lg fa-user-circle user-account mr-2"></i>{{user.name}}</button>
+                        <button type="button" class="btn btn-light btn-lg"><i
+                                class="fas fa-lg fa-user-circle user-account mr-2"></i>{{user.name}}</button>
                         <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="sr-only">Toggle Dropdown</span>
@@ -52,9 +55,9 @@
     </div>
 </header>
 
+<!-- ======= user header end =======-->
 
-
-<!-- ======= custom css start =======-->
+<!-- ======= user header style start =======-->
 
 
 <style>
@@ -119,8 +122,9 @@
         size: 150px;
     }
 
-    .account-font{
+    .account-font {
         font-family: 'Fira Sans', sans-serif;
     }
-
 </style>
+
+<!-- ======= user header style end =======-->
