--- a/views/user/order-success.hbs
+++ b/views/user/order-success.hbs
@@ -1,3 +1,5 @@
+<!-- ======= order success start =======-->
+
 <section class="pt-5">
     <div class="row">
         <div class="container">
@@ -8,3 +10,5 @@
         </div>
     </div>
 </section>
+
+<!-- ======= order success end =======-->
