--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -1,3 +1,5 @@
+<!-- ==== user view prodcuts start ==== -->
+
 <section class="mt-5 item-align-center justify-content-center">
   <div class="container">
       <div class="row justify-content-center ">
@@ -22,8 +24,11 @@
     <a href="https://github.com/rashidmachingal/" class="text-white">© 2021 Developed by Rashi Leo</a>
   </footer>
 
-{{!-- custom css --}}
+<!-- ==== user view prodcuts end ==== -->
 
+
+
+<!-- ==== user view prodcuts style start ==== -->
 
 <style>
     .image-container img{
