--- a/views/admin/add-product.hbs
+++ b/views/admin/add-product.hbs
@@ -1,3 +1,5 @@
+<!-- ===== add products start ==== -->
+
 <section class="pt-5">
     <div class="container">
         <div class="row">
@@ -34,3 +36,5 @@
         </div>
     </div>
 </section>
+
+<!-- ===== add products end ==== -->
