--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,54 +1,60 @@
- <section class="login-section">
-      <div class="container py-5">
-        <div class="row justify-content-center align-items-center">
-          <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-            <form action="/login" autocomplete="off" method="POST">
-            <div class="custom-card">
-              <div class="p-5 text-center">
-                <h3 class="mb-4">Login</h3>
-                <div class="mb-4">
-                  <input type="email" name="email" placeholder="Enter Email" class="form-control custom-form"/>
-                  {{#if loginErr}}
-                  <small id="emailHelp" class="form-text text-danger">{{loginErr}}</small>
-                  {{/if}}
-                </div>
-                <div class="mb-4">
-                  <input type="password" name="password" placeholder="Enter Password" class="form-control custom-form"/>
-                </div>
-                <button class="btn btn-primary custom-login mb-2" type="submit">Login</button>
-                <br>
-                <a href="/signup" class="mt-2">Create New Account?</a>
+<!-- ======= user login start =======-->
+
+<section class="login-section">
+  <div class="container py-5">
+    <div class="row justify-content-center align-items-center">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <form action="/login" autocomplete="off" method="POST">
+          <div class="custom-card">
+            <div class="p-5 text-center">
+              <h3 class="mb-4">Login</h3>
+              <div class="mb-4">
+                <input type="email" name="email" placeholder="Enter Email" class="form-control custom-form" />
+                {{#if loginErr}}
+                <small id="emailHelp" class="form-text text-danger">{{loginErr}}</small>
+                {{/if}}
               </div>
+              <div class="mb-4">
+                <input type="password" name="password" placeholder="Enter Password" class="form-control custom-form" />
+              </div>
+              <button class="btn btn-primary custom-login mb-2" type="submit">Login</button>
+              <br>
+              <a href="/signup" class="mt-2">Create New Account?</a>
             </div>
-          </form>
           </div>
-        </div>
+        </form>
       </div>
-    </section>
+    </div>
+  </div>
+</section>
 
-    {{!-- custom css --}}
+<!-- ======= user login end =======-->
 
-    <style>
-    .custom-card{
-        border-radius: 1rem;
-        width: 380px;
-        height: 374px;
-        background-color: rgb(255, 255, 255);
-        font-family: 'Fira Sans', sans-serif;
-    }
+<!-- ======= user login style start =======-->
 
-    .login-section{
-        background-color: rgb(190, 182, 182);
-        height: 827px;
-    }
+<style>
+  .custom-card {
+    border-radius: 1rem;
+    width: 380px;
+    height: 374px;
+    background-color: rgb(255, 255, 255);
+    font-family: 'Fira Sans', sans-serif;
+  }
 
-    .custom-login{
-        width: 100%;
-        height: 2.7rem;
-    }
+  .login-section {
+    background-color: rgb(190, 182, 182);
+    height: 827px;
+  }
 
-    .custom-form{
-        height: 40px;
-        width: 100%;
-    }
-    </style>
+  .custom-login {
+    width: 100%;
+    height: 2.7rem;
+  }
+
+  .custom-form {
+    height: 40px;
+    width: 100%;
+  }
+</style>
+
+<!-- ======= user login style end =======-->
