--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -1,55 +1,60 @@
+<!-- ======= user signup start =======-->
+
 <section class="login-section">
-      <div class="container py-5">
-        <div class="row justify-content-center align-items-center">
-          <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-            <form action="/signup" autocomplete="off" method="post">
-            <div class="custom-card">
-              <div class="p-5 text-center">
-                <h3 class="mb-4">Create New Account</h3>
-                <div class="mb-4">
-                  <input type="name" name="name" placeholder="Enter Full Name" class="form-control custom-form"/>
-                </div>
-                <div class="mb-4">
-                  <input type="email" name="email" placeholder="Enter Email" class="form-control custom-form"/>
-                </div>
-                <div class="mb-4">
-                  <input type="password" name="password" placeholder="Enter Password" class="form-control custom-form"/>
-                </div>
-                <button class="btn btn-primary custom-login mb-2" type="submit">Create New Account</button>
-                <br>
-                <a href="/login" class="mt-4">Already Have an Account?</a>
+  <div class="container py-5">
+    <div class="row justify-content-center align-items-center">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <form action="/signup" autocomplete="off" method="post">
+          <div class="custom-card">
+            <div class="p-5 text-center">
+              <h3 class="mb-4">Create New Account</h3>
+              <div class="mb-4">
+                <input type="name" name="name" placeholder="Enter Full Name" class="form-control custom-form" />
               </div>
+              <div class="mb-4">
+                <input type="email" name="email" placeholder="Enter Email" class="form-control custom-form" />
+              </div>
+              <div class="mb-4">
+                <input type="password" name="password" placeholder="Enter Password" class="form-control custom-form" />
+              </div>
+              <button class="btn btn-primary custom-login mb-2" type="submit">Create New Account</button>
+              <br>
+              <a href="/login" class="mt-4">Already Have an Account?</a>
             </div>
-          </form>
           </div>
-        </div>
+        </form>
       </div>
-    </section>
+    </div>
+  </div>
+</section>
 
-    {{!-- custom css --}}
+<!-- ======= user signup end =======-->
 
-    <style>
-    .custom-card{
-        border-radius: 1rem;
-        width: 380px;
-        height: 421px;
-        background-color: rgb(255, 255, 255);
-        font-family: 'Fira Sans', sans-serif;
-    }
+<!-- ======= user signup style start =======-->
 
-    .login-section{
-        background-color: rgb(190, 182, 182);
-        height: 827px;
-    }
+<style>
+  .custom-card {
+    border-radius: 1rem;
+    width: 380px;
+    height: 421px;
+    background-color: rgb(255, 255, 255);
+    font-family: 'Fira Sans', sans-serif;
+  }
 
-    .custom-login{
-        width: 100%;
-        height: 2.7rem;
-    }
+  .login-section {
+    background-color: rgb(190, 182, 182);
+    height: 827px;
+  }
 
-    .custom-form{
-        height: 40px;
-        width: 100%;
-    }
+  .custom-login {
+    width: 100%;
+    height: 2.7rem;
+  }
 
-    </style>
+  .custom-form {
+    height: 40px;
+    width: 100%;
+  }
+</style>
+
+<!-- ======= user signup style end =======-->
