Small changes added

--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -12,7 +12,7 @@
 
 
 
-    <!-- Custom CSS -->
+    <!-- Custom CSS Start -->
     <link rel="stylesheet" href="public/stylesheets/style.css">
 
     <!-- Google Fonts -->
