Added Product Search

--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -10,6 +10,7 @@
         <tr>
           <th scope="col">Image</th>
           <th scope="col">Product</th>
+           <th scope="col">Category</th>
           <th scope="col">Price</th>
           <th scope="col">Description</th>
           <th scope="col">Option</th>
@@ -20,6 +21,7 @@
         <tr>
           <td><img style="width: 50px;height: 50px;" src="/product-images/{{this._id}}.jpg"></td>
           <td>{{this.name}}</td>
+          <td>{{this.category}}</td>
           <td>₹{{this.price}}</td>
           <td>{{this.description}}</td>
           <td><a href="/admin/edit-product/{{this._id}}" class="btn btn-primary">Edit</a>
