--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -18,8 +18,17 @@
                         <a class="nav-link" href="/cart"><i class="fas fa-shopping-cart"><span id="cart-count"
                                     class="badge">{{cartCount}}</span></i> <span class="cart-hide">CART</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">PRODUCTS</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            CATEGORIES
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
                     </li>
                     {{#if user}}
                     <li class="nav-item">
@@ -27,6 +36,14 @@
                     </li>
                     {{/if}}
                 </ul>
+                <div id="search" class="search-wrap mr-auto">
+                    <form action="/search" class="form-inline mr-auto">
+                        <input class="form-control mr-sm-2" type="text" name="name" placeholder="Search"
+                            aria-label="Search">
+                        <button class="btn btn-danger" type="submit">Search</button>
+                        {{!-- <input class="btn btn-danger my-2 my-sm-2" type="submit">Search</button> --}}
+                    </form>
+                </div>
                 {{#if user}}
                 <div class="signup">
                     <div class="btn-group">
