Categories Section Added

--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -24,10 +24,10 @@
                             CATEGORIES
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="/category?category=Smart+Speaker">Smart Speaker</a>
+                            <a class="dropdown-item" href="/category?category=Smart+Phone">Smart Phone</a>
+                            <a class="dropdown-item" href="/category?category=Smart+Watch">Smart Watch</a>
+                            <a class="dropdown-item" href="/category?category=Mobile">Mobile</a>
                         </div>
                     </li>
                     {{#if user}}
