Search function updated

--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -38,8 +38,7 @@
                 </ul>
                 <div id="search" class="search-wrap mr-auto">
                     <form action="/search" class="form-inline mr-auto">
-                        <input class="form-control mr-sm-2" type="text" name="name" placeholder="Search"
-                            aria-label="Search">
+                        <input class="form-control mr-sm-2 product-search" type="text" name="name" placeholder="Search" aria-label="Search">
                         <button class="btn btn-danger" type="submit">Search</button>
                         {{!-- <input class="btn btn-danger my-2 my-sm-2" type="submit">Search</button> --}}
                     </form>
@@ -142,6 +141,8 @@
     .account-font {
         font-family: 'Fira Sans', sans-serif;
     }
+    
+
 </style>
 
 <!-- ======= user header style end =======-->
