--- a/views/user/search-data.hbs
+++ b/views/user/search-data.hbs
@@ -3,7 +3,7 @@
 <section class="mt-5 item-align-center justify-content-center">
   <div class="container">
       <div class="row justify-content-center ">
-        {{#each filterData}}
+        {{#each searchResult}}
         <div class="col-lg-3 col-md-4">
           <div class="custom-card card overflow-hidden p-2 bd-highlight ml-3 mb-3">
             <img class="card-img-top" src="/product-images/{{this._id}}.jpg" alt="Card image cap">
